@@ -1,0 +1,38 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+   <schemalist>
+      <schema>
+         <key>/schemas/apps/cairo-compmgr/default/perf/x</key>
+         <applyto>/apps/cairo-compmgr/default/perf/x</applyto>
+         <owner>gnome</owner>
+         <type>int</type>
+		 <default>20</default>
+         <locale name="C">
+            <short>Perf window x pos.</short>
+            <long>Perf window x pos.</long>
+         </locale>
+      </schema>
+      <schema>
+         <key>/schemas/apps/cairo-compmgr/default/perf/y</key>
+         <applyto>/apps/cairo-compmgr/default/perf/y</applyto>
+         <owner>gnome</owner>
+         <type>int</type>
+		 <default>20</default>
+         <locale name="C">
+            <short>Perf window y pos.</short>
+            <long>Perf window y pos.</long>
+         </locale>
+      </schema>
+      <schema>
+      <key>/schemas/apps/cairo-compmgr/default/perf/shortcut</key>
+         <applyto>/apps/cairo-compmgr/default/perf/shortcut</applyto>
+         <owner>gnome</owner>
+         <type>string</type>
+		 <default>&lt;Super&gt;f</default>
+         <locale name="C">
+            <short>Magnifier shortcut key.</short>
+            <long>The magnifier shortcut key.</long>
+         </locale>
+      </schema>
+   </schemalist>
+</gconfschemafile>
